[gd_scene load_steps=11 format=3 uid="uid://icugyr8dvid2"]

[ext_resource type="Script" uid="uid://c1qp42rvdh7se" path="res://Scenes/Main.gd" id="1_21xkr"]
[ext_resource type="PackedScene" uid="uid://d1eniolm7kd4r" path="res://Scenes/player.tscn" id="2_jjvhh"]
[ext_resource type="PackedScene" uid="uid://dvur1x1qgkh2q" path="res://Scenes/time_manager.tscn" id="3_6bp64"]
[ext_resource type="PackedScene" uid="uid://5oqclcynexd4" path="res://Scenes/grid_manager.tscn" id="4_344ge"]
[ext_resource type="PackedScene" uid="uid://b5jl58dfut0qv" path="res://Scenes/player_controller.tscn" id="5_ynf5e"]
[ext_resource type="PackedScene" uid="uid://thwdr3ga0x5y" path="res://Scenes/enemy_spawner.tscn" id="6_21xkr"]
[ext_resource type="PackedScene" uid="uid://c82wuwudxvobs" path="res://Scenes/enemy.tscn" id="7_6bp64"]
[ext_resource type="PackedScene" uid="uid://bymektimwkmne" path="res://Scenes/ItemSpawner.tscn" id="7_344ge"]
[ext_resource type="PackedScene" uid="uid://hkcghc5iwd6n" path="res://Scenes/DungeonGenerator.tscn" id="9_ynf5e"]
[ext_resource type="PackedScene" uid="uid://cuopanuhfgybd" path="res://Scenes/TileMapRenderer.tscn" id="10_hptm8"]

[node name="Main" type="Node2D"]
script = ExtResource("1_21xkr")

[node name="TimeManager" parent="." instance=ExtResource("3_6bp64")]

[node name="GridManager" parent="." instance=ExtResource("4_344ge")]

[node name="PlayerController" parent="." instance=ExtResource("5_ynf5e")]

[node name="EnemySpawner" parent="." instance=ExtResource("6_21xkr")]

[node name="ItemSpawner" parent="." instance=ExtResource("7_344ge")]

[node name="Enemy" parent="." instance=ExtResource("7_6bp64")]
visible = false

[node name="DungeonGenerator" parent="." instance=ExtResource("9_ynf5e")]

[node name="TileMapRenderer" parent="." instance=ExtResource("10_hptm8")]

[node name="Player" parent="." instance=ExtResource("2_jjvhh")]
position = Vector2(80, 80)
grid_position = Vector2i(1, 1)

[node name="Camera2D" type="Camera2D" parent="Player"]
